# blue-dot-ai-align-winter-2024-capstone

./: GETTING_STARTED.md  LICENSE  README.md  docker-compose.yml  report.md  structured.json
debate-for-ai-alignment/: README.md  pyproject.toml  report.md  requirements-dev.txt  requirements.txt
debate-for-ai-alignment/conf/: logging.yml
debate-for-ai-alignment/conf/base/: catalog.yml  parameters.yml
debate-for-ai-alignment/docs/source/: conf.py  index.rst
debate-for-ai-alignment/notebooks/: ReportAnalysis.ipynb  scratch_notebook.ipynb  simple_debate.ipynb
debate-for-ai-alignment/src/debate_for_ai_alignment/: __init__.py  __main__.py
debate-for-ai-alignment/src/debate_for_ai_alignment/pipelines/debate/: consultancy.py  expert.py  models.py  naive.py  nodes.py  pipeline.py  structured_debate.py  unstructured_debate.py  utils.py
debate-for-ai-alignment/src/debate_for_ai_alignment/pipelines/debate/structured_debate/: __init__.py  models.py  structured_debate.py
debate-for-ai-alignment/src/debate_for_ai_alignment/pipelines/preprocessing/: models.py  nodes.py  pipeline.py
debate-for-epistemic-safety/: .gitignore  README.md  pyproject.toml  requirements-docs.txt  requirements.txt
debate-for-epistemic-safety/conf/: logging.yml
debate-for-epistemic-safety/conf/base/: catalog.yml  (+1 more)
debate-for-epistemic-safety/notebooks/: Analysis.ipynb  Baseline.ipynb  NewScratch.ipynb  argument_evaluator.ipynb  scratch_notebook.ipynb  simple_debate.ipynb
debate-for-epistemic-safety/src/: app.py
debate-ui/: requirements.txt
debate-ui/docker/: Dockerfile
debate-ui/src/: app.py  data_manager.py
docker/: Dockerfile
scripts/: move_sensitive_files_to_local_conf.sh  setup_local.sh
ui/: app.py
(+258 files in other folders)
